--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <img src="images/softail.jpg" alt="">
 
       </div>
+      <h2>FAT BOY</h2>
 <p>The look of the Fat  Boy is more muscular then ever, thanks to all-new solid-dic wheels,a 240mm rear
 tire and the 160mm front tire. Add the jaw-dropping satin chrome finishes and signature
 LED forward lighting, and you'rve got a look that will make an even bigger impact then
@@ -42,6 +43,8 @@ ligter. You'll feel the difference that makes the first time you tip it up off i
         <img src="images/heritage.jpg" alt="">
 
       </div>
+      <h2>HERITAGE CLASSIC</h2>
+
       <p>The Heritage Classic used to be an homage to '50s chrome nostalgia.Take a look at the
         new one, and you'll see it's anything but that. The history is still there,
          and now it's done with style and a modern edge and a totally reinvigorated ride.
@@ -55,6 +58,7 @@ ligter. You'll feel the difference that makes the first time you tip it up off i
         <img src="images/softail-deluxe-gallery-1.jpg" alt="">
 
       </div>
+      <h2>DELUXE</h2>
       <p> The look of the Softail Deluxe has always been Deluxe. It's the classic Showstopper -
         born to stand out on a run down the Vagas strip. Now, underneath the bright chrome,
          you've got the ride of a seriously modern machine.17 kilograms lighter, easier habdling, massive power
@@ -68,6 +72,7 @@ ligter. You'll feel the difference that makes the first time you tip it up off i
         <img src="images/softail-slim.jpg" alt="">
 
       </div>
+      <h2>SOFTAIL SLIM</h2>
       <p>The idea behind bobber has always been to strip down and soup up the bike for a more exciting ride.
          The all-new softail Slim takes that idea to the edge.it'S 17 kilograms lighter than last year's model.
           It's got more power, more lean angle, and a redesigned front and reaar suspension. So you can put the
@@ -79,6 +84,7 @@ ligter. You'll feel the difference that makes the first time you tip it up off i
         <img src="images/softail-lowrider-marquee.jpg" alt="">
 
       </div>
+      <h2>LOW RIDER</h2>
       <p>The low Rider  was inspired by the tradition of individualism that came roaring to life in the custom chopper era.
         The rake on its front end. dual gauges on the tank and '70s-inspired graphics leave no doubt about that.
          Only  it's built for rolling faster, harder and longer than any LowRider motorcycle that ever rolled out
@@ -91,6 +97,7 @@ ligter. You'll feel the difference that makes the first time you tip it up off i
         <img src="images/mMkkD.jpg" alt="">
 
       </div>
+      <h2>BREAKOUT</h2>
       <p>The all-new Breakout model takes the idea of long, lean, tarmac-devouring muscle to the modern edge.
         The new smaller tank lets the Milwaukee-Eight engine stand out like a flexing bicep. The 240mm rear tire looks
         like it was born to leave a fat patch on the road. The all-new suspension lets you put maximum power to thre street.
@@ -105,6 +112,7 @@ ligter. You'll feel the difference that makes the first time you tip it up off i
         <img src="images/Fat-Bob-1.jpg" alt="">
 
       </div>
+      <h2>FAT BOB</h2>
       <p>Something this groundbreaking can only come from Harley-Davidson. The all-new Fat Bob, 11 kilograms lighter,
          massive Milwaukee-Eight engine power, tarmac-eating traction, a potholt-devouring suspention, agile cornering,
          and a take-no-prisoners look. You get a 2-1-2 upswept exhaust, a never-seen-before asymmetrical  tank graphic,
