--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <nav class='text-center'>
     <h1>Harley-Davidson showroom</h1>
-    <a>Manu</a>
+    <a>Menu</a>
     <br>
     <section class="sidebar float-right" name="">
       <li id='fatboy'>FAT BOY</li>
